--- a/proyecto001/miapp/templates/crear_curso.html
+++ b/proyecto001/miapp/templates/crear_curso.html
@@ -6,6 +6,16 @@
 
 {% block content %}
     <h1 class="title">
-        Agregar Curso
+        {{titulo}}
     </h1>
+    {% if form.errors %}
+        <strong class="rojo">    
+            Hay errores en el Formulario
+        </strong>
+    {% endif %}
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Agregar" />
+    </form>
 {% endblock %}
