--- a/proyecto001/miapp/templates/crear_carrera.html
+++ b/proyecto001/miapp/templates/crear_carrera.html
@@ -6,7 +6,17 @@
 
 {% block content %}
     <h1 class="title">
-        Agregar Carrera
+        {{titulo}}
     </h1>
+    {% if form.errors %}
+        <strong class="rojo">    
+            Hay errores en el Formulario
+        </strong>
+    {% endif %}
+    <form action="" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Agregar" />
+    </form>
 {% endblock %}
 
